--- a/locale/ja_JP/locale.po
+++ b/locale/ja_JP/locale.po
@@ -2,20 +2,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2019-11-19T11:05:24+00:00\n"
+"PO-Revision-Date: 2019-11-19T11:05:24+00:00\n"
 "Last-Translator: \n"
 "Language-Team: \n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2019-11-19T11:05:24+00:00\n"
-"PO-Revision-Date: 2019-11-19T11:05:24+00:00\n"
-"Language: \n"
 
 msgid "plugins.generic.staticPages.displayName"
 msgstr "統計ページプラグイン"
 
 msgid "plugins.generic.staticPages.description"
 msgstr "このプラグインは統計のコンテンツ管理ができます。"
+
+msgid "plugins.generic.staticPages.staticPages"
+msgstr ""
 
 msgid "plugins.generic.staticPages.pageTitle"
 msgstr "タイトル"
@@ -27,7 +30,9 @@ msgid "plugins.generic.staticPages.path"
 msgstr "パス"
 
 msgid "plugins.generic.staticPages.requirement.tinymce"
-msgstr "<strong>コンテンツを編集・追加するためには，TinyMCE プラグインがインストールされていなければなりません。</strong>"
+msgstr ""
+"<strong>コンテンツを編集・追加するためには，TinyMCE プラグインがインストール"
+"されていなければなりません。</strong>"
 
 msgid "plugins.generic.staticPages.editAddContent"
 msgstr "コンテンツの編集・追加"
@@ -41,11 +46,22 @@ msgstr "新規ページの作成"
 msgid "plugins.generic.staticPages.editStaticPage"
 msgstr "統計ページの編集"
 
+msgid "plugins.generic.staticPages.noneCreated"
+msgstr ""
+
 msgid "plugins.generic.staticPages.settingInstructions"
-msgstr "下記のフォームには作成された全ての統計ページが表示されています。右のリンクを使用してページの編集および削除が可能です。"
+msgstr ""
+"下記のフォームには作成された全ての統計ページが表示されています。右のリンクを"
+"使用してページの編集および削除が可能です。"
 
 msgid "plugins.generic.staticPages.editInstructions"
 msgstr "ページを追加・編集するために下記のフォームを使用してください。"
+
+msgid "plugins.generic.staticPages.pathRegEx"
+msgstr ""
+
+msgid "plugins.generic.staticPages.viewInstructions"
+msgstr ""
 
 msgid "plugins.generic.staticPages.duplicatePath"
 msgstr "この path は他の統計ページで既に使用されています。"
