--- a/locale/sv_SE/locale.po
+++ b/locale/sv_SE/locale.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "PO-Revision-Date: 2020-12-15 10:52+0000\n"
 "Last-Translator: Viveka Svensson <viveka.svensson@lnu.se>\n"
-"Language-Team: Swedish <http://translate.pkp.sfu.ca/projects/plugins/"
-"static-pages-plugin/sv_SE/>\n"
+"Language-Team: Swedish <http://translate.pkp.sfu.ca/projects/plugins/static-"
+"pages-plugin/sv_SE/>\n"
 "Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -11,61 +11,67 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 3.9.1\n"
 
-msgid "plugins.generic.staticPages.noneExist"
-msgstr "Inga sidor har skapats"
+msgid "plugins.generic.staticPages.displayName"
+msgstr "Plugin för statiska sidor"
 
-msgid "plugins.generic.staticPages.pageDeleted"
-msgstr "Sidan har tagits bort."
-
-msgid "plugins.generic.staticPages.pageSaved"
-msgstr "Sidan sparades."
-
-msgid "plugins.generic.staticPages.duplicatePath"
-msgstr "Sökvägen finns redan för en annan statisk sida."
-
-msgid "plugins.generic.staticPages.editInstructions"
-msgstr "Använd formuläret nedan för att lägga till/redigera innehåll."
-
-msgid "plugins.generic.staticPages.settingInstructions"
+msgid "plugins.generic.staticPages.description"
 msgstr ""
-"Formuläret nedan visar alla statiska sidor du har skapat. Du kan redigera "
-"eller ta bort sidor genom att använda länken på höger sida."
+"Detta plugin gör det möjligt att administrera innehållet på statiska sidor."
 
-msgid "plugins.generic.staticPages.noneCreated"
-msgstr "Inga statiska sidor har skapats."
+msgid "plugins.generic.staticPages.staticPages"
+msgstr "Statiska sidor"
 
-msgid "plugins.generic.staticPages.addNewPage"
-msgstr "Lägg till en ny sida"
+msgid "plugins.generic.staticPages.pageTitle"
+msgstr "Titel"
 
-msgid "plugins.generic.staticPages.editAddContent"
-msgstr "Redigera/lägg till innehåll"
+msgid "plugins.generic.staticPages.content"
+msgstr "Innehåll"
+
+msgid "plugins.generic.staticPages.path"
+msgstr "Sökväg"
 
 msgid "plugins.generic.staticPages.requirement.tinymce"
 msgstr ""
 "<p><strong>TinyMCE pluginet måste vara installerat för att det ska vara "
 "möjligt att lägga till/redigera innehåll.</strong></p>"
 
-msgid "plugins.generic.staticPages.path"
-msgstr "Sökväg"
-
-msgid "plugins.generic.staticPages.content"
-msgstr "Innehåll"
-
-msgid "plugins.generic.staticPages.pageTitle"
-msgstr "Titel"
-
-msgid "plugins.generic.staticPages.staticPages"
-msgstr "Statiska sidor"
-
-msgid "plugins.generic.staticPages.editStaticPage"
-msgstr "Redigera en statisk sida"
+msgid "plugins.generic.staticPages.editAddContent"
+msgstr "Redigera/lägg till innehåll"
 
 msgid "plugins.generic.staticPages.addStaticPage"
 msgstr "Lägg till en statisk sida"
 
-msgid "plugins.generic.staticPages.description"
-msgstr ""
-"Detta plugin gör det möjligt att administrera innehållet på statiska sidor."
+msgid "plugins.generic.staticPages.addNewPage"
+msgstr "Lägg till en ny sida"
 
-msgid "plugins.generic.staticPages.displayName"
-msgstr "Plugin för statiska sidor"
+msgid "plugins.generic.staticPages.editStaticPage"
+msgstr "Redigera en statisk sida"
+
+msgid "plugins.generic.staticPages.noneCreated"
+msgstr "Inga statiska sidor har skapats."
+
+msgid "plugins.generic.staticPages.settingInstructions"
+msgstr ""
+"Formuläret nedan visar alla statiska sidor du har skapat. Du kan redigera "
+"eller ta bort sidor genom att använda länken på höger sida."
+
+msgid "plugins.generic.staticPages.editInstructions"
+msgstr "Använd formuläret nedan för att lägga till/redigera innehåll."
+
+msgid "plugins.generic.staticPages.pathRegEx"
+msgstr ""
+
+msgid "plugins.generic.staticPages.viewInstructions"
+msgstr ""
+
+msgid "plugins.generic.staticPages.duplicatePath"
+msgstr "Sökvägen finns redan för en annan statisk sida."
+
+msgid "plugins.generic.staticPages.pageSaved"
+msgstr "Sidan sparades."
+
+msgid "plugins.generic.staticPages.pageDeleted"
+msgstr "Sidan har tagits bort."
+
+msgid "plugins.generic.staticPages.noneExist"
+msgstr "Inga sidor har skapats"
