--- a/locale/cs_CZ/locale.po
+++ b/locale/cs_CZ/locale.po
@@ -1,4 +1,3 @@
-# Jiří Dlouhý <jiri.dlouhy@czp.cuni.cz>, 2022.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
@@ -7,13 +6,12 @@ msgstr ""
 "PO-Revision-Date: 2022-08-09 12:25+0000\n"
 "Last-Translator: Jiří Dlouhý <jiri.dlouhy@czp.cuni.cz>\n"
 "Language-Team: Czech <http://translate.pkp.sfu.ca/projects/plugins/static-"
-"pages-plugin/cs_CZ/>\n"
+"pages-plugin/cs/>\n"
 "Language: cs_CZ\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Generator: Weblate 4.13.1\n"
 
 msgid "plugins.generic.staticPages.displayName"
 msgstr "Plugin statických stránek"
