--- a/locale/es_ES/locale.po
+++ b/locale/es_ES/locale.po
@@ -5,14 +5,13 @@ msgstr ""
 "POT-Creation-Date: 2019-11-19T11:05:23+00:00\n"
 "PO-Revision-Date: 2020-02-08 03:34+0000\n"
 "Last-Translator: Jordi LC <jordi.lacruz@uab.cat>\n"
-"Language-Team: Spanish <http://translate.pkp.sfu.ca/projects/plugins/"
-"static-pages-plugin/es/>\n"
+"Language-Team: Spanish <http://translate.pkp.sfu.ca/projects/plugins/static-"
+"pages-plugin/es/>\n"
 "Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 3.9.1\n"
 
 msgid "plugins.generic.staticPages.displayName"
 msgstr "Módulo de páginas estáticas"
