--- a/locale/it_IT/locale.po
+++ b/locale/it_IT/locale.po
@@ -1,4 +1,3 @@
-# Fulvio Delle Donne <fulviodelledonne@libero.it>, 2022.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
@@ -6,14 +5,13 @@ msgstr ""
 "POT-Creation-Date: 2019-11-19T11:05:24+00:00\n"
 "PO-Revision-Date: 2022-08-09 12:25+0000\n"
 "Last-Translator: Fulvio Delle Donne <fulviodelledonne@libero.it>\n"
-"Language-Team: Italian <http://translate.pkp.sfu.ca/projects/plugins/"
-"static-pages-plugin/it_IT/>\n"
+"Language-Team: Italian <http://translate.pkp.sfu.ca/projects/plugins/static-"
+"pages-plugin/it/>\n"
 "Language: it_IT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.13.1\n"
 
 msgid "plugins.generic.staticPages.displayName"
 msgstr "Pagine statiche"
