--- a/locale/ja_JP/locale.po
+++ b/locale/ja_JP/locale.po
@@ -1,4 +1,3 @@
-# TAKASHI IMAGIRE <imagire@gmail.com>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
@@ -6,14 +5,11 @@ msgstr ""
 "POT-Creation-Date: 2019-11-19T11:05:24+00:00\n"
 "PO-Revision-Date: 2021-12-11 17:15+0000\n"
 "Last-Translator: TAKASHI IMAGIRE <imagire@gmail.com>\n"
-"Language-Team: Japanese <http://translate.pkp.sfu.ca/projects/plugins/static-"
-"pages-plugin/ja_JP/>\n"
-"Language: ja_JP\n"
+"Language-Team: \n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 3.9.1\n"
 
 msgid "plugins.generic.staticPages.displayName"
 msgstr "統計ページプラグイン"
