--- a/locale/nl_NL/locale.po
+++ b/locale/nl_NL/locale.po
@@ -5,14 +5,13 @@ msgstr ""
 "POT-Creation-Date: 2019-11-19T11:05:24+00:00\n"
 "PO-Revision-Date: 2020-10-19 15:42+0000\n"
 "Last-Translator: Hans Spijker <hans.spijker@huygens.knaw.nl>\n"
-"Language-Team: Dutch <http://translate.pkp.sfu.ca/projects/plugins/"
-"static-pages-plugin/nl/>\n"
+"Language-Team: Dutch <http://translate.pkp.sfu.ca/projects/plugins/static-"
+"pages-plugin/nl/>\n"
 "Language: nl_NL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 3.9.1\n"
 
 msgid "plugins.generic.staticPages.displayName"
 msgstr "Statische pagina's plugin"
