--- a/locale/ru_RU/locale.po
+++ b/locale/ru_RU/locale.po
@@ -5,15 +5,14 @@ msgstr ""
 "POT-Creation-Date: 2019-11-19T11:05:24+00:00\n"
 "PO-Revision-Date: 2020-03-04 22:36+0000\n"
 "Last-Translator: Sergei Yukhimets <y_s_n@mail.ru>\n"
-"Language-Team: Russian <http://translate.pkp.sfu.ca/projects/plugins/"
-"static-pages-plugin/ru/>\n"
+"Language-Team: Russian <http://translate.pkp.sfu.ca/projects/plugins/static-"
+"pages-plugin/ru/>\n"
 "Language: ru_RU\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<="
-"4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 3.9.1\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 
 msgid "plugins.generic.staticPages.displayName"
 msgstr "Модуль «Статические страницы»"
