--- a/locale/uk_UA/locale.po
+++ b/locale/uk_UA/locale.po
@@ -1,4 +1,3 @@
-# Petro Bilous <petrobilous@ukr.net>, 2022.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
@@ -7,14 +6,13 @@ msgstr ""
 "PO-Revision-Date: 2022-03-22 09:56+0000\n"
 "Last-Translator: Petro Bilous <petrobilous@ukr.net>\n"
 "Language-Team: Ukrainian <http://translate.pkp.sfu.ca/projects/plugins/"
-"static-pages-plugin/uk_UA/>\n"
+"static-pages-plugin/uk/>\n"
 "Language: uk_UA\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<="
-"4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 3.9.1\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 
 msgid "plugins.generic.staticPages.displayName"
 msgstr "Плагін статичних сторінок"
