--- a/locale/zh_CN/locale.po
+++ b/locale/zh_CN/locale.po
@@ -1,4 +1,3 @@
-# Huang Feilong <hfl@nominsang.org>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
@@ -6,14 +5,11 @@ msgstr ""
 "POT-Creation-Date: 2019-11-19T11:05:25+00:00\n"
 "PO-Revision-Date: 2021-11-05 11:07+0000\n"
 "Last-Translator: Huang Feilong <hfl@nominsang.org>\n"
-"Language-Team: Chinese (Simplified) <http://translate.pkp.sfu.ca/projects/"
-"plugins/static-pages-plugin/zh_CN/>\n"
-"Language: zh_CN\n"
+"Language-Team: \n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 3.9.1\n"
 
 msgid "plugins.generic.staticPages.displayName"
 msgstr "静态页面插件"
